public interface AparelhoTelefonico {
    void ligar();
    void desligar();
    void receberChamada();
}
