public interface NavegadorInternet {
    void abrirPagina(String url);
    void fecharPagina();
    void voltar();
}
