public interface ReprodutorMusical {
    void play();
    void pause();
    void Proximo();
    void Anterior();
}
